--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CrearAbrirCsv</string>
+    <string name="crear_csv">Crear CSV</string>
+    <string name="leer_csv">Leer CSV</string>
+    <string name="sin_datos">Sin Datos</string>
 </resources>
